add MobileFrontend extension

--- a/.gitmodules
+++ b/.gitmodules
@@ -126,3 +126,7 @@
 	path = vendor
 	url = https://gerrit.wikimedia.org/r/mediawiki/vendor
 	branch = REL1_36
+[submodule "extensions/MobileFrontend"]
+	path = extensions/MobileFrontend
+	url = https://github.com/wikimedia/mediawiki-extensions-MobileFrontend
+	branch = REL1_36
