--- a/.gitmodules
+++ b/.gitmodules
@@ -158,3 +158,7 @@
 	path = extensions/DeleteBatch
 	url = https://github.com/wikimedia/mediawiki-extensions-DeleteBatch.git
 	branch = REL1_36
+[submodule "extensions/Cargo"]
+	path = extensions/Cargo
+	url = https://gerrit-replica.wikimedia.org/r/mediawiki/extensions/Cargo
+	branch = REL1_36
